tests/ui/feature-gates/feature-gate-global_asm_statement_position.stderr
error[E0658]: using `global_asm!` in statement positions is experimental
  --> $DIR/feature-gate-global_asm_statement_position.rs:4:5
   |
LL |     std::arch::global_asm!("");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #156965 <https://github.com/rust-lang/rust/issues/156965> for more information
   = help: add `#![feature(global_asm_statement_position)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
