tests/ui/feature-gates/feature-gate-global_asm_statement_position.rs
//@ needs-asm-support

fn main() {
    std::arch::global_asm!("");
    //~^ ERROR using `global_asm!` in statement positions is experimental [E0658]
}
